--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# Ignore application.properties
+src/main/resources/application.properties
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
