feat: Implement user authentication and role management
- Added AuthResource for handling user login with JWT token generation.
- Introduced PasswordService for password hashing and verification.
- Created TokenService for generating JWT tokens with user roles and claims.
- Updated User entity to include role management.
- Refactored UserRepository to utilize Panache methods for CRUD operations.
- Enhanced Booking and Route repositories to use Panache for database interactions.
- Modified BookingService to streamline booking creation and management.
- Updated SQL migration scripts to include new fields and data types.
- Added public key for JWT verification.

--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,33 @@
             <artifactId>quarkus-arc</artifactId> <!-- CDI -->
         </dependency>
 
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-flyway</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.enterprise</groupId>
+            <artifactId>jakarta.enterprise.cdi-api</artifactId>
+            <version>4.0.1</version> <!-- Use 3.0.0 for Jakarta EE 9 -->
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- Password hashing -->
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-elytron-security-common</artifactId>
+        </dependency>
+    
+        <!-- JWT tokens -->
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-smallrye-jwt</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-smallrye-jwt-build</artifactId>
+        </dependency>
+
         <!-- Hibernate Spatial for PostGIS -->
         <dependency>
             <groupId>org.hibernate.orm</groupId>
